--- a/style.css
+++ b/style.css
@@ -60,6 +60,20 @@ body {
     display: block;
 }
 
+.botao.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+
+
+
+
+
+
+
+
+
 @media screen and (min-widht: 768px) {
     .botoes {
         display: flex;
