--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ body {
 
 .botao.ativo{
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde);
+    border-bottom: 4px solid var(--verde
+    );
 }
 
 
