--- a/style.css
+++ b/style.css
@@ -67,9 +67,17 @@ body {
 }
 
 .abas-textos{
-    background-color: var();
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
 }
 
+.aba-conteudo.ativo{
+    display: block;
+}
+.aba-conteudo{
+    display: none;
+}
 
 
 
