--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap&');
+
 
 :root {
     --cor-de-fundo: #1E1E1E;
@@ -60,33 +61,39 @@ body {
     display: block;
 }
 
-.botao.ativo{
+.botao.ativo {
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--verde
-    );
+    border-bottom: 4px solid var(--verde);
 }
 
-.abas-textos{
+.abas-textos {
     background-color: var(--texto-fundo);
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
 
-.aba-conteudo.ativo{
+.aba-conteudo.ativo {
     display: block;
 }
+
 .aba-conteudo{
-    display: none;
+   display: none;
+}
+
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+
+.aba-conteudo-titulo-secundario{
+   text-align: center;
+   color: var(--verde);
+   text-transform: uppercase;
 }
 
 
 
-
-
-
-
-
-@media screen and (min-widht: 768px) {
+@media screen and (min-width: 768px) {
     .botoes {
         display: flex;
     }
@@ -98,5 +105,5 @@ body {
     .botao:last-child {
         border-radius: 0 40px 0 0;
     }
-
 }
+
